--- a/trackesiea/Camera_Calibration/Camera_Calibration.vcxproj
+++ b/trackesiea/Camera_Calibration/Camera_Calibration.vcxproj
@@ -26,6 +26,12 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="WxMainApp.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="WxMainApp.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{FFC5105A-915B-4035-884D-79C80CEFF642}</ProjectGuid>
@@ -136,11 +142,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\dev\opencv\build\include;D:\dev\wxMSW-3.1.1\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\dev\opencv\build\include;D:\dev\wxMSW-3.1.1\include;D:\dev\wxMSW-3.1.1\include\msvc</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;WXUSINGDLL;_UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>D:\dev\wxMSW-3.1.1\lib\vc141_x64_dll;D:\dev\opencv\build\x64\vc14\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_world341d.lib;wxbase31ud.lib;wxmsw31ud_core.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\dev\opencv\build\x64\vc14\lib;D:\dev\wxMSW-3.1.1\lib\vc_x64_dll</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_world341d.lib;wxmsw31ud_gl.lib;wxmsw31ud_stc.lib;wxmsw31ud_richtext.lib;wxmsw31ud_propgrid.lib;wxmsw31ud_ribbon.lib;wxmsw31ud_aui.lib;wxmsw31ud_xrc.lib;wxmsw31ud_qa.lib;wxbase31ud_xml.lib;wxmsw31ud_webview.lib;wxmsw31ud_html.lib;wxmsw31ud_media.lib;wxmsw31ud_adv.lib;wxmsw31ud_core.lib;wxbase31ud_net.lib;wxbase31ud.lib;wxscintillad.lib;wxexpatd.lib;wxtiffd.lib;wxjpegd.lib;wxpngd.lib;wxzlibd.lib;wxregexud.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug - Marko|x64'">
@@ -168,12 +175,6 @@
       <AdditionalDependencies>opencv_world340d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="client_test.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="client_test.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
