--- a/trackesiea/Client_Test/Client_Test.vcxproj
+++ b/trackesiea/Client_Test/Client_Test.vcxproj
@@ -138,12 +138,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\opencv320\vc15_32\install\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\opencv320\vc15_32\install\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>D:\opencv320\vc15_32\install\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\opencv320\vc15_32\install\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_world320d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -204,9 +204,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="client_test.h" />
+    <ClInclude Include="Tracker.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="client_test.cpp" />
+    <ClCompile Include="Tracker.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
