--- a/trackesiea/Client_Test/Client_Test.vcxproj
+++ b/trackesiea/Client_Test/Client_Test.vcxproj
@@ -138,7 +138,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)opencv320\include;$(SolutionDir)libusb-1.0\include\libusb-1.0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)opencv320\include;$(SolutionDir)libusb-1.0\include\libusb-1.0;$(SolutionDir)PS3EYEDriver\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -185,7 +185,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release - Antoine2|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\Users\Antoine\source\repos\Track-Esiea\trackesiea\libusb-1.0\include\libusb-1.0;$(SolutionDir)opencv320\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)opencv320\include;$(SolutionDir)libusb-1.0\include\libusb-1.0;$(SolutionDir)PS3EYEDriver\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)opencv320\lib;$(SolutionDir)libusb-1.0\MS32\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -202,11 +202,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\PS3EYEDriver\src\ps3eye.h" />
     <ClInclude Include="client_test.h" />
     <ClInclude Include="counter_test.h" />
+    <ClInclude Include="stdafx.h" />
     <ClInclude Include="Tracker.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\PS3EYEDriver\src\ps3eye.cpp" />
     <ClCompile Include="client_test.cpp" />
     <ClCompile Include="counter_test.cpp" />
     <ClCompile Include="Tracker.cpp" />
