--- a/trackesiea/Client_Test/Client_Test.vcxproj
+++ b/trackesiea/Client_Test/Client_Test.vcxproj
@@ -205,13 +205,16 @@
   <ItemGroup>
     <ClInclude Include="..\PS3EYEDriver\src\ps3eye.h" />
     <ClInclude Include="client_test.h" />
+    <ClInclude Include="Client_UI.h" />
     <ClInclude Include="counter_test.h" />
+    <ClInclude Include="cvui.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Tracker.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\PS3EYEDriver\src\ps3eye.cpp" />
     <ClCompile Include="client_test.cpp" />
+    <ClCompile Include="Client_UI.cpp" />
     <ClCompile Include="counter_test.cpp" />
     <ClCompile Include="Tracker.cpp" />
   </ItemGroup>
