Nouvelle méthode de calibrage : + précise et + correcte !

--- a/trackesiea/Client_Test/configuration.cfg
+++ b/trackesiea/Client_Test/configuration.cfg
@@ -2,19 +2,25 @@ camera :
 {
   resolutionX = 640;
   resolutionY = 480;
-  gain = 1;
-  exposure = 11;
+  gain = 10;
+  exposure = 10;
+  world_x_axis : 
+  {
+    x = -0.786738;
+    y = 0.336323;
+    z = 0.51762;
+  };
   world_z_axis : 
   {
-    x = -17.137779;
-    y = -11.917714;
-    z = -15.091736;
+    x = -0.530155;
+    y = -0.594529;
+    z = -0.604541;
   };
   world_origin : 
   {
-    x = 6.644847;
-    y = 1.151492;
-    z = 164.400162;
+    x = -8.332581;
+    y = -6.182922;
+    z = 125.378815;
   };
 };
 tracking : 
@@ -22,11 +28,11 @@ tracking :
   filter : 
   {
     colorHue = 90;
-    colorSat = 175;
+    colorSat = 150;
     colorVal = 255;
-    toleranceHue = 87;
-    toleranceSat = 163;
-    toleranceVal = 88;
+    toleranceHue = 25;
+    toleranceSat = 80;
+    toleranceVal = 80;
   };
   filterType = "multi_channel_lowpass";
 };
