Support de 2 controlleurs

--- a/trackesiea/Client_Test/configuration.cfg
+++ b/trackesiea/Client_Test/configuration.cfg
@@ -2,36 +2,45 @@ camera :
 {
   resolutionX = 640;
   resolutionY = 480;
-  gain = 10;
-  exposure = 10;
+  gain = 8;
+  exposure = 8;
   world_x_axis : 
   {
-    x = -0.786738;
-    y = 0.336323;
-    z = 0.51762;
+    x = -0.773496;
+    y = 0.461222;
+    z = 0.434716;
   };
   world_z_axis : 
   {
-    x = -0.530155;
-    y = -0.594529;
-    z = -0.604541;
+    x = -0.531352;
+    y = -0.353163;
+    z = -0.770027;
   };
   world_origin : 
   {
-    x = -8.332581;
-    y = -6.182922;
-    z = 125.378815;
+    x = 3.61113;
+    y = 7.836725;
+    z = 150.679382;
   };
 };
 tracking : 
 {
-  filter : 
+  filter1 : 
   {
     colorHue = 90;
-    colorSat = 150;
+    colorSat = 177;
     colorVal = 255;
     toleranceHue = 25;
     toleranceSat = 80;
+    toleranceVal = 80;
+  };
+  filter2 : 
+  {
+    colorHue = 6;
+    colorSat = 108;
+    colorVal = 255;
+    toleranceHue = 76;
+    toleranceSat = 108;
     toleranceVal = 80;
   };
   filterType = "multi_channel_lowpass";
